add i dont know what i do last timew

--- a/projects/templates/projects/single-project.html
+++ b/projects/templates/projects/single-project.html
@@ -1,6 +1,7 @@
 <body>
-  {% extends 'main.html' %} {% block content %} -->
-
-  <h1>Single Project Template {{count}}</h1>
+  {% extends 'main.html' %} {% block content %}
+  <h1>{{obj.title}}</h1>
+  <br />
+  <p>{{obj.description}}</p>
   {% endblock content %} -->
 </body>
