--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -1,17 +1,21 @@
-{% extends 'main.html' %} {% block content %}
-
-<h1>Projects Template</h1>
-<p>
-  Lorem ipsum dolor sit amet, officia excepteur ex fugiat reprehenderit enim
-  labore culpa sint ad nisi Lorem pariatur mollit ex esse exercitation amet.
-  Nisi anim cupidatat excepteur officia. Reprehenderit nostrud nostrud ipsum
-  Lorem est aliquip amet voluptate voluptate dolor minim nulla est proident.
-  Nostrud officia pariatur ut officia. Sit irure elit esse ea nulla sunt ex
-  occaecat reprehenderit commodo officia dolor Lorem duis laboris cupidatat
-  officia voluptate. Culpa proident adipisicing id nulla nisi laboris ex in
-  Lorem sunt duis officia eiusmod. Aliqua reprehenderit commodo ex non excepteur
-  duis sunt velit enim. Voluptate laboris sint cupidatat ullamco ut ea
-  consectetur et est culpa et culpa duis.
-</p>
-
-{% endblock content %}
+{% extends 'main.html' %}
+{% block content %}
+    <h1>{{ msg }}</h1>
+    {% if number > 10 %}
+        <p>Number is greater than 10</p>
+    {% elif number == 10 %}
+        <p>Number is ten</p>
+    {% else %}
+        <p>number is lower than 10</p>
+    {% endif %}
+    <hr />
+    <h1>Projects</h1>
+    <ul>
+        {% for project in projects %}
+            <li>
+                Title:<a href="{% url 'project' project.id %}">{{ project.title }}</a>
+            </li>
+        {% endfor %}
+    </ul>
+    <h1>
+    {% endblock content %}
