--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -1,20 +1,32 @@
 {% extends 'main.html' %}
 {% block content %}
-    <h1>{{ msg }}</h1>
-    {% if number > 10 %}
-        <p>Number is greater than 10</p>
-    {% elif number == 10 %}
-        <p>Number is ten</p>
-    {% else %}
-        <p>number is lower than 10</p>
-    {% endif %}
-    <hr />
     <h1>Projects</h1>
-    <ul>
+    <table>
+        <tr>
+            <th>Projects</th>
+            <th>Positive Votes</th>
+            <th>Votes</th>
+            <th>Created</th>
+            <th></th>
+            <th></th>
+            <th></th>
+        </tr>
         {% for project in projects %}
-            <li>
-                Title:<a href="{% url 'project' project.id %}">{{ project.title }}</a>
-            </li>
+            <tr>
+                <td>{{ project.title }}</td>
+                <td>{{ project.vote_ratio }}%</td>
+                <td>{{ project.vote_total }}</td>
+                <td>{{ project.created }}</td>
+                <td>
+                    <a href="{% url 'project' project.id %}">View</a>
+                </td>
+                <td>
+                    <a href="{% url 'delete-project' project.id %}">Delete</a>
+                </td>
+                <td>
+                    <a href="{% url 'update-project' project.id %}">Edit</a>
+                </td>
+            </tr>
         {% endfor %}
-    </ul>
+    </table>
 {% endblock content %}
