--- a/templates/main.html
+++ b/templates/main.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
-
-<head>
-  <title>DevSearch</title>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-</head>
-
-<body>
-  {% include 'navbar.html' %} {% block content %} {% endblock content %}
-  <footer>footer</footer>
-</body>
-
+    <head>
+        <title>DevSearch</title>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link href="{% static 'styles/main.css'  %}"
+              rel="stylesheet"
+              type="text/css"
+              media="screen"/>
+    </head>
+    <body>
+        {% include 'navbar.html' %}
+        {% block content %}
+        {% endblock content %}
+        <footer>
+            footer
+        </footer>
+    </body>
 </html>
