--- a/projects/templates/projects/single-project.html
+++ b/projects/templates/projects/single-project.html
@@ -1,83 +1,84 @@
 {% extends 'main.html' %}
 {% block content %}
-<!-- Main Section -->
-<main class="singleProject my-md">
-  <div class="container">
-    <div class="layout">
-      <div class="column column--1of3">
-        <h3 class="singleProject__subtitle">Tools & Stacks</h3>
-        <div class="singleProject__toolStack">
-          <!--tags -->
-          {% for tag in tags %}
-          <span class="tag tag--pill tag--sub tag--lg">
-            <small>{{ tag }}</small>
-          </span>
-          {% endfor %}
+    <!-- Main Section -->
+    <main class="singleProject my-md">
+        <div class="container">
+            <div class="layout">
+                <div class="column column--1of3">
+                    <h3 class="singleProject__subtitle">Tools & Stacks</h3>
+                    <div class="singleProject__toolStack">
+                        <!--tags -->
+                        {% for tag in obj.tags.all %}
+                            <span class="tag tag--pill tag--sub tag--lg">
+                                <small>{{ tag }}</small>
+                            </span>
+                        {% endfor %}
+                    </div>
+                    {% if obj.source_link %}
+                        <a class="singleProject__liveLink" href="#" target="_blank"><i class="im im-external-link"></i>Source Code
+                        </a>
+                    {% endif %}
+                    {% if obj.demo_link %}
+                        <a class="singleProject__liveLink" href="#" target="_blank"><i class="im im-external-link"></i>Live Demo
+                        </a>
+                    {% endif %}
+                </div>
+                <div class="column column--2of3">
+                    <img class="singleProject__preview"
+                         src="{{ obj.featured_image.url }}"
+                         alt="{{ obj.title }} thumbnail" />
+                    <a href="profile.html" class="singleProject__developer">Md.{{ obj.owner.name }}</a>
+                    <h2 class="singleProject__title">{{ obj.title }}</h2>
+                    <h3 class="singleProject__subtitle">About the Project</h3>
+                    <div class="singleProject__info">{{ obj.description }}</div>
+                    <div class="comments">
+                        <h3 class="singleProject__subtitle">Feedback</h3>
+                        <h5 class="project--rating">
+                            {{ obj.vote_ratio }}% Postitive Feedback ({{ obj.vote_total }}
+                            Vote{{ obj.vote_total| pluralize:"s" }})
+                        </h5>
+                        {% if request.user.profile.id in obj.reviewers %}
+                            <p>You have already vote</p>
+                        {% elif request.user.profile == obj.owner %}
+                            <p>You cant vote for your project</p>
+                        {% elif request.user.is_authenticated %}
+                            <form class="form" action="{% url 'project' obj.id %}" method="POST">
+                                {% csrf_token %}
+                                <!-- Textarea -->
+                                {% for field in form %}
+                                    <div class="form__field">
+                                        <label for="formInput#textarea">{{ field.label }}</label>
+                                        {{ field }}
+                                    </div>
+                                {% endfor %}
+                                <input class="btn btn--sub btn--lg" type="submit" value="Comments" />
+                            </form>
+                        {% else %}
+                            <p>
+                                <a href="{% url 'login' %}?next={{ request.path }}">Login to vote</a>
+                            </p>
+                        {% endif %}
+                        <div class="commentList">
+                            {% for review in obj.review_set.all %}
+                                {% if review.body %}
+                                    <div class="comment">
+                                        <a href="profile.html">
+                                            <img class="avatar avatar--md"
+                                                 src="{{ review.owner.profile_image.url }}"
+                                                 alt="user" />
+                                        </a>
+                                        <div class="comment__details">
+                                            <a href="{% url 'user-profile' review.owner.id %}"
+                                               class="comment__author">{{ review.owner.name }}</a>
+                                            <p class="comment__info">{{ review.body|linebreaksbr }}</p>
+                                        </div>
+                                    </div>
+                                {% endif %}
+                            {% endfor %}
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        {% if obj.source_link %}
-        <a class="singleProject__liveLink" href="#" target="_blank"><i class="im im-external-link"></i>Source Code
-        </a>
-        {% endif %}
-        {% if obj.demo_link %}
-        <a class="singleProject__liveLink" href="#" target="_blank"><i class="im im-external-link"></i>Live Demo
-        </a>
-        {% endif %}
-      </div>
-      <div class="column column--2of3">
-        <img class="singleProject__preview" src="{{ obj.featured_image.url }}" alt="{{ obj.title }} thumbnail" />
-        <a href="profile.html" class="singleProject__developer">Md. Shahriar Parvez</a>
-        <h2 class="singleProject__title">{{ obj.title }}</h2>
-        <h3 class="singleProject__subtitle">About the Project</h3>
-        <div class="singleProject__info">{{ obj.description }}</div>
-        <div class="comments">
-          <h3 class="singleProject__subtitle">Feedback</h3>
-          <h5 class="project--rating">
-            {{ obj.vote_ratio }}% Postitive Feedback ({{ obj.vote_total }}
-            Vote{{ obj.vote_total| pluralize:"s" }})
-          </h5>
-          <form class="form" action="#" method="POST">
-            <!-- Textarea -->
-            <div class="form__field">
-              <label for="formInput#textarea">Comments:</label>
-              <textarea class="input input--textarea" name="message" id="formInput#textarea"
-                placeholder="Write your comments here..."></textarea>
-            </div>
-            <input class="btn btn--sub btn--lg" type="submit" value="Comments" />
-          </form>
-          <div class="commentList">
-            <div class="comment">
-              <a href="profile.html">
-                <img class="avatar avatar--md"
-                  src="https://pbs.twimg.com/profile_images/1335382240931368961/b3wSZKj4_400x400.jpg" alt="user" />
-              </a>
-              <div class="comment__details">
-                <a href="profile.html" class="comment__author">Sulamita Ivanov</a>
-                <p class="comment__info">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Reprehenderit alias numquam perferendis mollitia minus minima
-                  exercitationem possimus ab deserunt qui, soluta iusto
-                  doloribus eveniet similique consequuntur ratione, dignissimos
-                  ut magni laborum quo.
-                </p>
-              </div>
-            </div>
-            <div class="comment">
-              <a href="profile.html">
-                <img class="avatar avatar--md" src="https://avatars.githubusercontent.com/u/33843378" alt="user" />
-              </a>
-              <div class="comment__details">
-                <a href="profile.html" class="comment__author">Dennis Ivanov</a>
-                <p class="comment__info">
-                  Consectetur adipisicing elit. Reprehenderit alias numquam
-                  perferendis mollitia minus minima exercitationem possimus ab
-                  deserunt qui, ratione, dignissimos ut magni laborum quo.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</main>
+    </main>
 {% endblock content %}
