--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -18,10 +18,10 @@
                 <li class="header__menuItem">
                     <a href="{% url 'projects' %}">Projects</a>
                 </li>
-                <li class="header__menuItem">
-                    <a href="inbox.html">Inbox</a>
-                </li>
                 {% if request.user.is_authenticated %}
+                    <li class="header__menuItem">
+                        <a href="{% url 'inbox' %}">Inbox</a>
+                    </li>
                     <li class="header__menuItem">
                         <a href="{% url 'account' %}">My Account</a>
                     </li>
