--- a/users/templates/users/account.html
+++ b/users/templates/users/account.html
@@ -10,7 +10,7 @@
                             <a class="tag tag--pill tag--main settings__btn"
                                href="{% url 'edit-account' %}"><i class="im im-edit"></i> Edit</a>
                             <img class="avatar avatar--xl dev__avatar"
-                                 src="{{ user.profile_image.url }}"/>
+                                 src="{{ user.profile_image.url }}" />
                             <h2 class="dev__name">{{ user.name }}</h2>
                             <p class="dev__title">{{ user.short_intro }}</p>
                             <p class="dev__location">Based in {{ user.location }}</p>
@@ -55,7 +55,8 @@
                     </div>
                     <div class="settings">
                         <h3 class="settings__title">Skills</h3>
-                        <a class="tag tag--pill tag--sub settings__btn tag--lg" href="#"><i class="im im-plus"></i> Add Skill</a>
+                        <a class="tag tag--pill tag--sub settings__btn tag--lg"
+                           href="{% url 'create-skill' %}"><i class="im im-plus"></i> Add Skill</a>
                     </div>
                     <table class="settings__table">
                         <tr>
@@ -65,8 +66,10 @@
                                     <p>{{ skill.description }}</p>
                                 </td>
                                 <td class="settings__tableActions">
-                                    <a class="tag tag--pill tag--main settings__btn" href="#"><i class="im im-edit"></i> Edit</a>
-                                    <a class="tag tag--pill tag--main settings__btn" href="#"><i class="im im-x-mark-circle-o"></i> Delete</a>
+                                    <a class="tag tag--pill tag--main settings__btn"
+                                       href="{% url 'update-skill' skill.id %}"><i class="im im-edit"></i> Edit</a>
+                                    <a class="tag tag--pill tag--main settings__btn"
+                                       href="{% url 'delete-skill' skill.id %}?next={% url 'account' %}"><i class="im im-x-mark-circle-o"></i> Delete</a>
                                 </td>
                             </tr>
                         {% endfor %}
@@ -92,7 +95,7 @@
                                     <a class="tag tag--pill tag--main settings__btn"
                                        href="{% url 'update-project' project.id %}"><i class="im im-edit"></i> Edit</a>
                                     <a class="tag tag--pill tag--main settings__btn"
-                                       href="{% url 'delete-project' project.id %}"><i class="im im-x-mark-circle-o"></i> Delete</a>
+                                       href="{% url 'delete-project' project.id %}?next={% url 'account' %}"><i class="im im-x-mark-circle-o"></i> Delete</a>
                                 </td>
                             </tr>
                         {% endfor %}
