--- a/users/templates/users/profiles.html
+++ b/users/templates/users/profiles.html
@@ -10,10 +10,14 @@
                     <h2>FROM AROUND THE WORLD</h2>
                 </div>
                 <div class="hero-section__search">
-                    <form class="form" action="{% url 'profiles' %}" method="get">
+                    <form class="form"
+                          id="searchForm"
+                          action="{% url 'profiles' %}"
+                          method="get">
                         <div class="form__field">
                             <label for="formInput#search">Search Developers</label>
                             <input class="input input--text"
+                                   value="{{ search_query }}"
                                    id="formInput#search"
                                    type="text"
                                    name="search_query"
@@ -56,5 +60,6 @@
                 </div>
             </div>
         </section>
+        {% include "paginator.html" with queryset=users custom_range=custom_range %}
     </main>
 {% endblock content %}
