--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -36,7 +36,7 @@
                             <div class="card project">
                                 <a href="{% url 'project' project.id %}" class="project">
                                     <img class="project__thumbnail"
-                                         src="{{ project.featured_image.url }}"
+                                         src="{{ project.image_url }}"
                                          alt="project thumbnail" />
                                     <div class="card__body">
                                         <h3 class="project__title">{{ project.title }}</h3>
