--- a/projects/templates/projects/single-project.html
+++ b/projects/templates/projects/single-project.html
@@ -15,19 +15,24 @@
                         {% endfor %}
                     </div>
                     {% if obj.source_link %}
-                        <a class="singleProject__liveLink" href="#" target="_blank"><i class="im im-external-link"></i>Source Code
+                        <a class="singleProject__liveLink"
+                           href="{{ obj.source_link }}"
+                           target="_blank"><i class="im im-external-link"></i>Source Code
                         </a>
                     {% endif %}
                     {% if obj.demo_link %}
-                        <a class="singleProject__liveLink" href="#" target="_blank"><i class="im im-external-link"></i>Live Demo
+                        <a class="singleProject__liveLink"
+                           href="{{ obj.demo_link }}"
+                           target="_blank"><i class="im im-external-link"></i>Live Demo
                         </a>
                     {% endif %}
                 </div>
                 <div class="column column--2of3">
                     <img class="singleProject__preview"
-                         src="{{ obj.featured_image.url }}"
+                         src="{{ obj.image_url }}"
                          alt="{{ obj.title }} thumbnail" />
-                    <a href="profile.html" class="singleProject__developer">Md.{{ obj.owner.name }}</a>
+                    <a href="{% url 'user-profile' obj.owner.id %}"
+                       class="singleProject__developer">Md.{{ obj.owner.name }}</a>
                     <h2 class="singleProject__title">{{ obj.title }}</h2>
                     <h3 class="singleProject__subtitle">About the Project</h3>
                     <div class="singleProject__info">{{ obj.description }}</div>
@@ -64,7 +69,7 @@
                                     <div class="comment">
                                         <a href="profile.html">
                                             <img class="avatar avatar--md"
-                                                 src="{{ review.owner.profile_image.url }}"
+                                                 src="{{ review.owner.image_url }}"
                                                  alt="user" />
                                         </a>
                                         <div class="comment__details">
